src/components/telemetry/telemetry.scss
@import "../../scss/lib/variables";

.telemetry-component {
    padding: $spacer;

    h1 {
        color: $grey-color;
        font-size: 1.5rem;
        font-weight: bold;
        padding: ($spacer * 2) 0;
        text-align: center;
    }

    .telemetry-text {
        font-size: 0.9rem;
        font-style: italic;
        padding: 0 ($spacer * 4);
        text-align: center;
    }

    .telemetry-tldr {
        font-weight: 500;
        padding-bottom: $spacer * 3;
        text-align: center;
    }
}

